RESOLVED FIXED100433
REGRESSION (132422): Tiles don't move when the Find dialog causes programmatic scrolls
https://bugs.webkit.org/show_bug.cgi?id=100433
Summary REGRESSION (132422): Tiles don't move when the Find dialog causes programmati...
Tim Horton
Reported 2012-10-25 16:16:05 PDT
I have a patch. <rdar://problem/12575582>
Attachments
patch (1.97 KB, patch)
2012-10-25 16:21 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2012-10-25 16:21:40 PDT
Tim Horton
Comment 2 2012-10-25 16:27:08 PDT
Note You need to log in before you can comment on or make changes to this bug.